[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Boss.png" type="Texture" id=1]
[ext_resource path="res://Boss.gd" type="Script" id=2]
[ext_resource path="res://Sprites/BossKuamanda.png" type="Texture" id=3]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://sounds/enemyhitsound.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/shootound.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 56 )

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 86.6017, 61.1621 )

[node name="Boss" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="Boss" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Kumanda" type="Position2D" parent="."]
position = Vector2( -104.271, 48.3515 )
__meta__ = {
"_gizmo_extents_": 62.4
}

[node name="BossKuamanda" type="Sprite" parent="Kumanda"]
position = Vector2( 0.336174, -0.108459 )
rotation = 2.09439
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.1228
margin_right = 39.8772
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
text = "Düşman Sinyal:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 28.2728
margin_right = 68.2728
margin_bottom = 18.0
custom_fonts/font = ExtResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -4.0

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -4.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
